Medium size is fine

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -33,13 +33,13 @@
 			},
 			// Generating the Complete Link
 			toBlock: function(obj){
-				return 'youtube'+obj.id;
+				return 'youtube' + obj.id;
 			},
 			
 			// Generating the Preview
 			toPreview: function(obj){
 				return (
-					'<img src="http://img.youtube.com/vi/'+obj.id++ '/maxresdefault.jpg" alt="Youtube Video"/>'
+					'<img src="http://img.youtube.com/vi/'+obj.id+'/maxresdefault.jpg" alt="Youtube Video"/>'
 				);
 			}
 		});
