--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -15,33 +15,63 @@
 	</script>
 
 	<script type="text/javascript">
-		CMS.registerEditorComponent({
-			// Internal ID of the Component
-			id: "youtube",
-			label: "Mytube",
-			fields: [
-			    name: "id",
-			    label: "Youtube Video ID",
-			    widget: "string"
-			],
-			pattern: /^youtube (\S+)$/,
-			// Extracting the Youtube ID
-			fromBlock: function(match){
-				return {
-					id: match[1]
-				};
-			},
-			// Generating the Complete Link
-			toBlock: function(obj){
-				return 'youtube' + obj.id;
-			},
+		// Mytube
+		// CMS.registerEditorComponent({
+		// 	// Internal ID of the Component
+		// 	id: "youtube",
+		// 	label: "Mytube",
+		// 	fields: [
+		// 	    name: "id",
+		// 	    label: "Youtube Video ID",
+		// 	    widget: "string"
+		// 	],
+		// 	pattern: /^youtube (\S+)$/,
+		// 	// Extracting the Youtube ID
+		// 	fromBlock: function(match){
+		// 		return {
+		// 			id: match[1]
+		// 		};
+		// 	},
+		// 	// Generating the Complete Link
+		// 	toBlock: function(obj){
+		// 		return 'youtube' + obj.id;
+		// 	},
 			
-			// Generating the Preview
-			toPreview: function(obj){
-				return (
-					'<img src="http://img.youtube.com/vi/'+obj.id+'/maxresdefault.jpg" alt="Youtube Video"/>'
-				);
-			}
+		// 	// Generating the Preview
+		// 	toPreview: function(obj){
+		// 		return (
+		// 			'<img src="http://img.youtube.com/vi/'+obj.id+'/maxresdefault.jpg" alt="Youtube Video"/>'
+		// 		);
+		// 	}
+		// });
+
+		//Youtube
+		CMS.registerEditorComponent({
+  // Internal id of the component
+  id: "youtube",
+  // Visible label
+  label: "Youtube",
+  // Fields the user need to fill out when adding an instance of the component
+  fields: [{name: 'id', label: 'Youtube Video ID', widget: 'string'}],
+  // Pattern to identify a block as being an instance of this component
+  pattern: /^youtube (\S+)$/,
+  // Function to extract data elements from the regexp match
+  fromBlock: function(match) {
+    return {
+      id: match[1]
+    };
+  },
+  // Function to create a text block from an instance of this component
+  toBlock: function(obj) {
+    return 'youtube ' + obj.id;
+  },
+  // Preview output for this component. Can either be a string or a React component
+  // (component gives better render performance)
+  toPreview: function(obj) {
+    return (
+      '<img src="http://img.youtube.com/vi/' + obj.id + '/maxresdefault.jpg" alt="Youtube Video"/>'
+    );
+  }
 		});
 	</script>
 </body>
